// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button Renders correctly 1`] = `
<div
  className="inline-flex flex-ycenter relative"
  onClick={[Function]}
>
  <input
    className="sc-htpNat fKdXhZ"
    type="button"
    value="Primary"
  />
</div>
`;

exports[`Button Secondary Renders correctly 1`] = `
<div
  className="inline-flex flex-ycenter relative"
  onClick={[Function]}
>
  <input
    className="sc-bxivhb cRsiwW"
    type="button"
    value="Secondary"
  />
</div>
`;
